--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 
 <head>
     <meta charset="utf-8">
-    <title>ThrillNew</title>
+    <title>Thrill故事集</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <meta name="author" content="王偉泰">
+    <meta name="copyright" content="Thrill.T3">
+
+    <meta name="keywords" content="Thrill,三光吼,小說,novel">
+    <meta name="description" content="三光吼的Thrill故事集">
+
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <meta property="og:title" content="Thrill故事集">
+<!--    <meta property="og:url" content="http://hermajesty.esy.es">-->
+    <meta property="og:image" content="http://thrill-t3.com/fbRemiel.jpg">
+    <meta property="og:description" content="三光吼的Thrill故事集">
+
+    <meta itemprop="name" content="Thrill故事集">
+    <meta itemprop="image" content="http://thrill-t3.com/fbRemiel.jpg">
+    <meta itemprop="description" content="三光吼的Thrill故事集">
+
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -25,9 +45,68 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div id="bgStyle1">TO READ<br>OR NOT TO READ</div>
-<!--    <div id="bgStyle1">演</div>-->
-    <div id="bgStyle2">THAT IS NOT A QUESTION</div>
+
+    <div id="loadingBlock">
+
+        <div id="loading">loading</div>
+        <div id="skip">skip!</div>
+
+        <div id="logoContain">
+
+
+            <div id="T3" class="logoHori"></div>
+            <div id="h5" class="logoHori"></div>
+            <div id="r4" class="logoHori"></div>
+            <div id="horiCut"></div>
+
+
+            <div id="thrillStar"></div>
+
+
+            <div id="T1" class="logoVert"></div>
+            <div id="T2" class="logoVert"></div>
+
+            <div id="h1" class="logoVert"></div>
+            <div id="h2" class="logoVert"></div>
+            <div id="h3" class="logoVert"></div>
+            <div id="h4" class="logoVert"></div>
+
+            <div id="r1" class="logoVert"></div>
+            <div id="r2" class="logoVert"></div>
+            <div id="r3Box">
+                <div id="r3IN"></div>
+            </div>
+
+
+            <div id="i1" class="logoVert"></div>
+            <div id="i2" class="logoVert"></div>
+
+            <div id="l11" class="logoVert"></div>
+            <div id="l12" class="logoVert"></div>
+
+            <div id="l21" class="logoVert"></div>
+            <div id="l22" class="logoVert"></div>
+
+            <div id="vertCut"></div>
+
+
+            <div class="logoCut"></div>
+            <div id="logoCutLeft" class="logoCut"></div>
+            <div id="logoCutRight" class="logoCut"></div>
+
+            <div id="outCutTop" class="outCut"></div>
+            <div id="outCutRight" class="outCut"></div>
+            <div id="outCutLeft" class="outCut"></div>
+
+        </div>
+
+    </div>
+
+
+
+    <div id="bgStyle1" class="slogan">TO READ
+        <br>OR NOT TO READ</div>
+    <div id="bgStyle2" class="slogan">THAT IS NOT A QUESTION</div>
 
     <div class="viewHeight">
         <img id="bgImg" class="verticalMid" src="./images/bbuOs.jpg" alt="">
@@ -40,21 +119,34 @@
                     <div class="summonBox"></div>
                     <div class="slideOut verticalMid">
                         <div class="thrillText allMid">
+                            <div id="portTitle">Project.Thrill</div>
                             <img src="./images/logo.png" alt="">
+
+                            <p>打造 Thrill 的這個想法究竟是何時萌生的其實我忘了。</p>
+                            <p>唯一可以確定的是，它多半是在宜蘭鴨母寮的甲車場誕生的。</p><br>
+                            <p>有時是星空下的夜哨，</p>
+                            <p>我會從軍褲側邊掏出出筆記本記錄下靈感。</p><br>
+                            <p>有時則是在黑燼漫飛的烈陽下，</p>
+                            <p>我也會再掏出筆記本畫下一些構想。</p><br>
+                            <p>偶爾也在午休時那褪色的薄床上，</p>
+                            <p>汗流浹背的拿著各式色筆，在小筆記本上試著草繪出一些想法。</p><br>
+                            <p>而現在，兩年之後</p><br><br><br>
+
+
+<!--
                             <p>有幾個故事在我的生命之中醞釀了許多年</p>
-                            <p>而我曾經認為</p>
+                            <p>而我曾認為</p>
                             <p>既然明天故事只會變得更好，那又何須今天急著把故事寫出來？</p>
                             <br>
                             <br>
                             <p>直到我終於發現</p>
                             <p>如果我再不動筆... 那這輩子可能就來不及寫完了...</p>
                             <br>
-                            <p>Thrill將是乘載這系列故事的一個平台，而這裡就是Thrill。</p>
+                            <p>Thrill將是乘載這系列故事的一個平台<br>而這裡，就是Thrill。</p>
                             <br>
                             <br>
                             <p>-STORIES-</p>
                             <div id="allsList">
-                                <br>
                                 <p>Remiel（獨立故事）</p>
                                 <p>斷耳奇壇（掙扎者系列）</p>
                                 <p>Cross Finger（T3系列）</p>
@@ -62,13 +154,14 @@
                                 <p>箭頭標籤（獨立故事）</p>
                                 <p>T3</p>
                             </div>
+-->
                         </div>
                     </div>
                 </div>
 
                 <div id="stories_UlBox">
                     <ul id="storyUl" class="verticalMid">
-                        <h3 id="stroyHead">Stories：</h3>
+                        <h3 id="stroyHead">Now Stories：</h3>
                     </ul>
                 </div>
 
@@ -101,20 +194,22 @@
                     <div class="summonBox"></div>
                     <div class="slideOut verticalMid">
                         <div class="authorText">
+                            <div class="authorH2">關於作者：</div>
                             <div id="authorImg"></div>
                             <h2>三洸吼</h2>
                             <p>其實我算不上非常喜歡畫圖，不過腦中卻有十分想呈現的畫面...</p>
-                            <p>我也沒有那麼熱中於寫作，但我有無論如何都想說的故事...</p>
+                            <p>雖然我也沒有那麼熱衷於寫作，但我有無論如何都想說的故事...</p>
                             <br>
-                            <p>所以，唯有當這些我沒那麼喜歡的事全湊在一起...</p>
+                            <p>所以當這些小小的渴望全湊在一起時...</p>
                             <br>
                             <p>就變成了我想做的事，</p>
                             <br>
                             <p>我所嚮往的景色。</p>
-
                         </div>
-                        <a id="email" href="mailto:thrill.t3@gmail.com"><img id="imgEmail" src="./images/Email-icon.png" alt="">
-                            <br>Email Me</a>
+                        <a id="email" href="mailto:thrill.t3@gmail.com">
+                            <img id="imgEmail" src="./images/email.png">
+                            <br>Email Me
+                        </a>
                     </div>
                 </div>
 
@@ -160,7 +255,7 @@
 
 
 
-    <!-- build:js scripts/main.js -->
+    <!-- build:js scripts/thrill_index.js -->
     <!-- bower:js -->
 
     <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -169,13 +264,21 @@
 
     <script src="../bower_components/jquery.easing/js/jquery.easing.js"></script>
 
+    <script src="../bower_components/jquery.preload/jquery.preload.min.js"></script>
+
+    <script src="../bower_components/eventEmitter/EventEmitter.js"></script>
+
+    <script src="../bower_components/eventie/eventie.js"></script>
+
+    <script src="../bower_components/imagesloaded/imagesloaded.js"></script>
+
     <!-- endinject -->
     <!-- inject:js -->
     <script src="scripts/stories.json"></script>
 
-    <script src="scripts/jquery.preload.min.js"></script>
-
     <script src="scripts/viewSet.js"></script>
+
+    <script src="scripts/logoAnimate.js"></script>
 
     <script src="scripts/folderAct.js"></script>
 
