--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
     <meta property="og:title" content="Thrill故事集">
-<!--    <meta property="og:url" content="http://hermajesty.esy.es">-->
+    <!--    <meta property="og:url" content="http://hermajesty.esy.es">-->
     <meta property="og:image" content="http://thrill-t3.com/fbRemiel.jpg">
     <meta property="og:description" content="三光吼的Thrill故事集">
 
@@ -42,9 +42,6 @@
 </head>
 
 <body>
-    <!--[if lt IE 10]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
 
     <div id="loadingBlock">
 
@@ -109,6 +106,7 @@
     <div id="bgStyle2" class="slogan">THAT IS NOT A QUESTION</div>
 
     <div class="viewHeight">
+
         <img id="bgImg" class="verticalMid" src="./images/bbuOs.jpg" alt="">
 
         <div class="article viewHeight">
@@ -123,17 +121,24 @@
                             <img src="./images/logo.png" alt="">
 
                             <p>打造 Thrill 的這個想法究竟是何時萌生的其實我忘了。</p>
-                            <p>唯一可以確定的是，它多半是在宜蘭鴨母寮的甲車場誕生的。</p><br>
+                            <p>唯一可以確定的是，它多半是在宜蘭鴨母寮的甲車場誕生的。</p>
+                            <br>
                             <p>有時是星空下的夜哨，</p>
-                            <p>我會從軍褲側邊掏出出筆記本記錄下靈感。</p><br>
+                            <p>我會從軍褲側邊掏出出筆記本記錄下靈感。</p>
+                            <br>
                             <p>有時則是在黑燼漫飛的烈陽下，</p>
-                            <p>我也會再掏出筆記本畫下一些構想。</p><br>
+                            <p>我也會再掏出筆記本畫下一些構想。</p>
+                            <br>
                             <p>偶爾也在午休時那褪色的薄床上，</p>
-                            <p>汗流浹背的拿著各式色筆，在小筆記本上試著草繪出一些想法。</p><br>
-                            <p>而現在，兩年之後</p><br><br><br>
+                            <p>汗流浹背的拿著各式色筆，在小筆記本上試著草繪出一些想法。</p>
+                            <br>
+                            <p>而現在，兩年之後</p>
+                            <br>
+                            <br>
+                            <br>
 
 
-<!--
+                            <!--
                             <p>有幾個故事在我的生命之中醞釀了許多年</p>
                             <p>而我曾認為</p>
                             <p>既然明天故事只會變得更好，那又何須今天急著把故事寫出來？</p>
@@ -287,27 +292,24 @@
     <!-- endinject -->
     <!-- endbuild -->
 
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <!--
     <script>
-        (function (b, o, i, l, e, r) {
-            b.GoogleAnalyticsObject = l;
-            b[l] || (b[l] =
-                function () {
-                    (b[l].q = b[l].q || []).push(arguments)
-                });
-            b[l].l = +new Date;
-            e = o.createElement(i);
-            r = o.getElementsByTagName(i)[0];
-            e.src = 'https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e, r)
-        }(window, document, 'script', 'ga'));
-        ga('create', 'UA-XXXXX-X');
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-66808019-1', 'auto');
         ga('send', 'pageview');
     </script>
--->
+
+
 </body>
 
 </html>
