--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Thrill故事集</title>
+    <title>Taylor - 前端工程師履歷</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,20 +11,19 @@
     <meta name="author" content="王偉泰">
     <meta name="copyright" content="Thrill.T3">
 
-    <meta name="keywords" content="Thrill,三光吼,小說,novel">
-    <meta name="description" content="三光吼的Thrill故事集">
+    <meta name="description" content="The resume for Front-end engineer">
 
     <link rel="shortcut icon" href="/favicon.ico">
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
-    <meta property="og:title" content="Thrill故事集">
+    <meta property="og:title" content="Taylor - 前端工程師履歷">
     <!--    <meta property="og:url" content="http://hermajesty.esy.es">-->
     <meta property="og:image" content="http://thrill-t3.com/fbRemiel.jpg">
-    <meta property="og:description" content="三光吼的Thrill故事集">
+    <meta property="og:description" content="The resume for Front-end engineer">
 
-    <meta itemprop="name" content="Thrill故事集">
+    <meta itemprop="name" content="Taylor - 前端工程師履歷">
     <meta itemprop="image" content="http://thrill-t3.com/fbRemiel.jpg">
-    <meta itemprop="description" content="三光吼的Thrill故事集">
+    <meta itemprop="description" content="The resume for Front-end engineer">
 
 
     <link rel="shortcut icon" href="/favicon.ico">
@@ -34,8 +33,8 @@
     <script src="scripts/localhostDependencies/libs.js"></script>
     <!-- endbuild -->
 
-    <!-- build:css style/good.css -->
-    <link rel="stylesheet" href="stylesheets/index_main.css">
+    <!-- build:css style/resume.css -->
+    <link rel="stylesheet" href="stylesheets/resume.css">
     <!-- endbuild -->
 
 
@@ -101,9 +100,9 @@
 
 
 
-    <div id="bgStyle1" class="slogan">TO READ
-        <br>OR NOT TO READ</div>
-    <div id="bgStyle2" class="slogan">THAT IS NOT A QUESTION</div>
+    <div id="bgStyle1" class="slogan">Taylor
+        <br>The resume for</div>
+    <div id="bgStyle2" class="slogan">Front-end engineer</div>
 
     <div class="viewHeight">
 
@@ -117,33 +116,27 @@
                     <div class="summonBox"></div>
                     <div class="slideOut verticalMid">
                         <div class="thrillText allMid">
-                            <div id="portTitle">Project.Thrill</div>
+                            <div id="portTitle">Hire.Me</div>
                             <img src="./images/logo.png" alt="">
+                            <h3>前端技能：</h3>
+                            <p>html、css(scss , Media Queries)、javascript、jquery、</p>
+                            <p>Bootstrap、angularJS(熟練中)、</p>
 
-                            <p>打造 Thrill 的這個想法究竟是何時萌生的其實我忘了。</p>
-                            <p>唯一可以確定的是，它多半是在宜蘭鴨母寮的甲車場誕生的。</p>
-                            <br>
-                            <p>有時是星空下的夜哨，</p>
-                            <p>我會從軍褲側邊掏出出筆記本記錄下靈感。</p>
-                            <br>
-                            <p>有時則是在黑燼漫飛的烈陽下，</p>
-                            <p>我也會再掏出筆記本畫下一些構想。</p>
-                            <br>
-                            <p>偶爾也在午休時那褪色的薄床上，</p>
-                            <p>汗流浹背的拿著各式色筆，在小筆記本上試著草繪出一些想法。</p>
-                            <br>
-                            <p>而現在，兩年之後</p>
-                            <br>
-                            <br>
-                            <br>
+                            <p>略懂：canvas</p>
+                            <h3>後端技能：</h3>
+                            <p>php+mysql (資料庫基本應用)</p>
 
+                            <h3>其他：</h3>
+                            <p>Git (基本應用)、gulp、</p>
+                            <p>photoshop(中階)、illustrator（沒有PS熟）、</p>
+                            <p>英文：中級。</p>
                         </div>
                     </div>
                 </div>
 
                 <div id="stories_UlBox">
                     <ul id="storyUl" class="verticalMid">
-                        <h3 id="stroyHead">Now Stories：</h3>
+                        <h3 id="stroyHead">作品：</h3>
                     </ul>
                 </div>
 
@@ -165,10 +158,7 @@
 
 
                 <div id="introBox" class="horizonMid">
-                    <h2>Remeil</h2>
-                    <p>從世界的頂點墜落，眼前璀璨的未來與自己一同粉碎。
-                        <br>當他發現世界已無法同過去那般耀眼時...
-                        <br>故事從這裡開始</p>
+                    <h2>Remiel故事展演平台</h2><p>一個專門展演小說故事的平台，由於希望毫不受限的達成原始設計構想，所以未使用任何框架。目前完成度最高的作品。</p><p>除了使用SweetAlert跟jquery.easing外，網站所有內容皆由自己獨立撰寫繪製完成。</p>
                 </div>
 
 
@@ -176,19 +166,26 @@
                     <div class="summonBox"></div>
                     <div class="slideOut verticalMid">
                         <div class="authorText">
-                            <div class="authorH2">關於作者：</div>
-                            <div id="authorImg"></div>
-                            <h2>三洸吼</h2>
-                            <p>其實我算不上非常喜歡畫圖，不過腦中卻有十分想呈現的畫面...</p>
-                            <p>雖然我也沒有那麼熱衷於寫作，但我有無論如何都想說的故事...</p>
-                            <br>
-                            <p>所以當這些小小的渴望全湊在一起時...</p>
-                            <br>
-                            <p>就變成了我想做的事，</p>
-                            <br>
-                            <p>我所嚮往的景色。</p>
+                            <div class="authorH2">簡歷自述：</div>
+<!--                            <div id="authorImg"></div>-->
+                            <h3>姓名：Taylor</h3>
+                            <h3>性別：男</h3>
+                            <h3>學歷：中興大學電機系畢業</h3>
+                            <h3>現居：台北市</h3>
+<!--
+                            <h3>工作經歷：</h3>
+                            <p>謎攻城密室工作室：設計、製作、主持</p>
+-->
+<!--
+                            <h3>長處：</h3>
+                            <p>邏輯能力強，有分析克服問題的能力，學習速度快，具溝通能力。</p>
+                            <h3>自述：</h3>
+                            <p>[工作心態]：作為一個創業經驗者，我能理解細節要求對於產品成敗的關鍵性。所以對於工作上的要求，我絕不會被牽制在一個「我覺得沒差」的心理狀態，而願意將工作務實的做到更高的需求層級。</p>
+                            <p>[能力]：我備邏輯分析能力，所以幾乎不會被遇到的問題卡死。對自己的學習能力也十分有自信，對於任何提昇專業能力的需求，我也必定能吃的下來。</p>
+                            <p>[態度]：我對公司能抱有主動正面的付出心態。大學時代從伯朗咖啡離職時，基於新進員工的教育效率太低，便主動幫店長設計了一份「分店」專用的新進職員SOP，幫助新進員工更快進入狀況，減少人員流動造成的衝擊。</p>
+-->
                         </div>
-                        <a id="email" href="mailto:thrill.t3@gmail.com">
+                        <a id="email" href="mailto:sunrise91.t3@gmail.com">
                             <img id="imgEmail" src="./images/email.png">
                             <br>Email Me
                         </a>
@@ -204,23 +201,23 @@
         <ul id="folderUl">
             <li id="aboutThrill" class="folder">
                 <img id="folderLogo" src="./images/logo.png" alt="">
-                <h2>關於Project. Thrill</h2>
+                <h2>個人技能</h2>
                 <div class="folder_tag">
-                    <p>About Thrill</p>
+                    <p>Skills</p>
                 </div>
             </li>
             <li id="stories" class="folder">
                 <img src="./images/testN.gif" alt="">
-                <h2>- Thrill 故事集 -</h2>
+                <h2>個人作品</h2>
                 <div class="folder_tag">
-                    <p>All Stories</p>
+                    <p>Work</p>
                 </div>
             </li>
             <li id="aboutWriter" class="folder">
                 <img src="./images/poli.png" alt="">
-                <h2>關於作者</h2>
+                <h2>個人簡歷</h2>
                 <div class="folder_tag">
-                    <p>Author</p>
+                    <p>about Me</p>
                 </div>
             </li>
             <div id="folderSwitcher"></div>
@@ -237,7 +234,7 @@
 
 
 
-    <!-- build:js scripts/thrill_index.js -->
+    <!-- build:js scripts/resume_main.js -->
     <!-- bower:js -->
 
     <script src="../bower_components/jquery/dist/jquery.js"></script>
@@ -256,19 +253,18 @@
 
     <!-- endinject -->
     <!-- inject:js -->
-    <script src="scripts/stories.json"></script>
-
     <script src="scripts/viewSet.js"></script>
 
-    <script src="scripts/logoAnimate.js"></script>
+    <script src="scripts/resume/resume.js"></script>
 
     <script src="scripts/folderAct.js"></script>
 
-    <script src="scripts/summon.js"></script>
+    <script src="scripts/resume/resume.json"></script>
 
     <!-- endinject -->
     <!-- endbuild -->
 
+<!--
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -285,6 +281,7 @@
         ga('create', 'UA-66808019-1', 'auto');
         ga('send', 'pageview');
     </script>
+-->
 
 
 </body>
